[tool.poetry]
name = "clearcutnocturnalclimate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask-restful = "^0.3.8"
flask-sqlalchemy = "^2.4.4"
pymongo = "^3.11.0"
Flask-PyMongo = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
